# zdb

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: docs.yml  full-test.yml  full-validation.yml  nightly.yml  release.yml  test.yml
dev/hooks/: pre-commit
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: data-flow.md  design-decisions.md  modules.md  overview.md
docs/src/guide/: building-apps.md  format-reference.md  getting-started.md  mobile-constraints.md  search.md  sync.md  types.md  zettels.md
docs/src/technical/: benchmarks.md  bundle.md  clean-architecture.md  crdt-resolver.md  data-model.md  errors.md  ffi.md  git-ops.md  git-scalability-audit.md  indexer.md  nosql.md  parser.md  performance.md  phase-2-exit.md  rest-api.md  server-read-path.md  server.md  solid.md  sql-engine.md  storage-budget.md  sync.md  walkthrough.md
examples/android-host-shell/: README.md  build.gradle.kts  settings.gradle.kts
examples/android-host-shell/app/: build.gradle.kts
examples/android-host-shell/app/src/main/java/com/doogat/hostshell/app/: MainActivity.kt  ZDBApplication.kt
examples/android-host-shell/core-zdb/: build.gradle.kts
examples/android-host-shell/core-zdb/src/main/java/com/doogat/hostshell/: ZDBModule.kt
examples/android-host-shell/feature-bookmarks/: build.gradle.kts
examples/android-host-shell/feature-bookmarks/src/main/java/com/doogat/hostshell/bookmarks/: BookmarkListScreen.kt  BookmarksModule.kt
examples/android-host-shell/feature-contacts/: build.gradle.kts
examples/android-host-shell/feature-contacts/src/main/java/com/doogat/hostshell/contacts/: ContactListScreen.kt  ContactsModule.kt
examples/ios-host-shell/: README.md
examples/ios-host-shell/HostShell/Sources/App/: AppState.swift  ContentView.swift  HostShellApp.swift  SearchView.swift
examples/ios-host-shell/HostShell/Sources/Modules/Bookmarks/: BookmarkDetailView.swift  BookmarkListView.swift  BookmarksModule.swift
examples/ios-host-shell/HostShell/Sources/Modules/Contacts/: ContactListView.swift  ContactsModule.swift
examples/ios-host-shell/HostShell/Sources/Shared/: ZDBModule.swift
tests/: Cargo.toml  smoke.ps1  smoke.sh
tests/e2e/: attachments.rs  common.rs  delete_backlinks.rs  main.rs  multi_device.rs  pgwire.rs  read_pool.rs  rename.rs  search_links.rs  serve.rs  server_mutations.rs  sql_lifecycle.rs  subscriptions.rs  sync_crdt.rs
tests/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
tests/kotlin/src/main/kotlin/uniffi/zdb_core/: zdb_core.kt
tests/kotlin/src/test/kotlin/com/doogat/zetteldb/: ZettelDBTest.kt
tests/swift/: Package.swift  README.md
tests/swift/Sources/ZettelDB/: Exports.swift  zdb_core.swift
tests/swift/Tests/ZettelDBTests/: ZettelDBTests.swift
zdb-cli/: Cargo.toml
zdb-cli/src/: main.rs  updater.rs
zdb-core/: Cargo.toml
zdb-core/benches/: crud.rs  growth.rs  helpers.rs  large_scale.rs  search.rs  sync.rs
zdb-core/src/: attachments.rs  bundle.rs  bundled_types.rs  compaction.rs  crdt_resolver.rs  error.rs  ffi.rs  git_ops.rs  hlc.rs  indexer.rs  lib.rs  maintenance.rs  nosql.rs  parser.rs  sql_engine.rs  sync_manager.rs  traits.rs  types.rs  zdb.udl
zdb-core/tests/: growth_thresholds.rs  maintenance_test.rs  property_tests.proptest-regressions  property_tests.rs  query_thresholds.rs  sync_test.rs  sync_thresholds.rs
zdb-server/: Cargo.toml
zdb-server/benches/: server_load.rs
zdb-server/src/: actor.rs  auth.rs  config.rs  error.rs  events.rs  filter.rs  lib.rs  maintenance.rs  nosql_api.rs  pgwire.rs  read_pool.rs  reload.rs  rest.rs  schema.rs  ws.rs
zdb-uniffi-bindgen/: Cargo.toml
