[package]
name = "zdb-e2e"
version = "0.2.0"
edition = "2021"
publish = false

[[test]]
name = "e2e"
path = "e2e/main.rs"
harness = true

[dependencies]
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
tokio-postgres = "0.7"
tungstenite = { version = "0.26", features = ["handshake"] }
url = "2"
