[package]
name = "zdb-core"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
automerge = "0.7"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
tracing = "0.1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sqlparser = "0.55"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
similar = "2"
thiserror = "2"
toml = "0.8"
uniffi = { version = "0.29", features = ["cli"] }
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
sha2 = "0.10"

redb = { version = "2", optional = true }
serde_json = { version = "1", optional = true }

[features]
profiling = []
nosql = ["redb", "serde_json"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
walkdir = "2"

[[bench]]
name = "crud"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "growth"
harness = false
