[package]
name = "zdb-core"
version = "0.1.0"
edition = "2021"
autobenches = false

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
automerge = "0.7"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
tracing = "0.1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled", "vtab"] }
sqlparser = "0.55"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
similar = "2"
thiserror = "2"
toml = "0.8"
uniffi = "0.29"
uuid = { version = "1", features = ["v4"] }
tar = "0.4"
sha2 = "0.10"

redb = { version = "2", optional = true }
serde_json = { version = "1", optional = true }

[features]
profiling = []
nosql = ["redb", "serde_json"]
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[[bench]]
name = "crud"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "growth"
harness = false

[[bench]]
name = "large_scale"
harness = false
