[package]
name = "zdb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
zdb-core = { path = "../zdb-core", features = ["nosql"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
arc-swap = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
async-graphql = { version = "7", features = ["dynamic-schema"] }
async-graphql-axum = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures-util = "0.3"
async-trait = "0.1"
pgwire = "0.25"
indexmap = "2"
log = "0.4"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sqlparser = "0.55"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-postgres = "0.7"

[[bench]]
name = "server_load"
harness = false
